[gd_scene load_steps=7 format=3 uid="uid://c4nalordjijrh"]

[ext_resource type="Script" path="res://Menus/MainMenu/main_menu.gd" id="1_2ya0w"]
[ext_resource type="Texture2D" uid="uid://1yuyk5ink1cv" path="res://BackgroundAssets/feesh.png" id="2_wsajn"]
[ext_resource type="StyleBox" uid="uid://c2nqiwudvaseb" path="res://Resources/Styles/Standard Button/standard_button_normal_style.tres" id="3_o7gka"]
[ext_resource type="StyleBox" uid="uid://doq33mqbb3i7r" path="res://Resources/Styles/Standard Button/standard_button_hover_style.tres" id="4_mxkqu"]
[ext_resource type="StyleBox" uid="uid://dd6kvr76jafiq" path="res://Resources/Styles/Standard Button/standard_button_pressed_style.tres" id="5_virqm"]
[ext_resource type="PackedScene" uid="uid://n183p1en26jy" path="res://Menus/SettingsMenu/settings_menu_Main_menu.tscn" id="6_k6cxg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_2ya0w")

[node name="Feesh" type="Sprite2D" parent="."]
position = Vector2(573, 323)
scale = Vector2(1.82381, 1.298)
texture = ExtResource("2_wsajn")

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 518.0
offset_top = 424.0
offset_right = 646.0
offset_bottom = 535.0
pivot_offset = Vector2(64, 0)
theme_override_constants/separation = 12

[node name="StartButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("3_o7gka")
theme_override_styles/hover = ExtResource("4_mxkqu")
theme_override_styles/pressed = ExtResource("5_virqm")
text = "START"

[node name="SettingsButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("3_o7gka")
theme_override_styles/hover = ExtResource("4_mxkqu")
theme_override_styles/pressed = ExtResource("5_virqm")
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("3_o7gka")
theme_override_styles/hover = ExtResource("4_mxkqu")
theme_override_styles/pressed = ExtResource("5_virqm")
text = "QUIT"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SettingsMenu" parent="CanvasLayer" instance=ExtResource("6_k6cxg")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
